// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiErrorBanner Component should render when error prop is passed 1`] = `
<t
  status="warning"
  title="An error occurred"
>
  <p>
    Sorry, there was an issue loading your your resource.
  </p>
  <t
    onClick={[Function]}
    outline={true}
    size="default"
  >
    Show Error Details
  </t>
</t>
`;

exports[`ApiErrorBanner Component should render with details 1`] = `
<t
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
  <t
    onClick={[Function]}
    outline={true}
    size="default"
  >
    Show Error Details
  </t>
</t>
`;

exports[`ApiErrorBanner Component should render with details 2`] = `
<t
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
  <t
    onClick={[Function]}
    outline={true}
    size="default"
  >
    Hide Error Details
  </t>
  <p
    style={
      Object {
        "marginTop": "20px",
      }
    }
  >
    <strong>
      Details:
    </strong>
     
    Got Damn!
  </p>
</t>
`;

exports[`ApiErrorBanner Component should render with no props 1`] = `
<t
  status="warning"
  title="An error occurred"
>
  <p>
    Sorry, there was an issue.
  </p>
</t>
`;

exports[`ApiErrorBanner Component should render with props 1`] = `
<t
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
</t>
`;

exports[`ApiErrorBanner Component should render with reload 1`] = `
<t
  status="info"
  title="You Have Another Mission"
>
  <p>
    Clean the conference room
  </p>
  <t
    onClick={[Function]}
    outline={true}
    size="default"
    style={
      Object {
        "marginRight": "10px",
      }
    }
  >
    Try Again
  </t>
</t>
`;
